--- a/index.html
+++ b/index.html
@@ -11,11 +11,33 @@
     <link rel="stylesheet" href="./common.css" />
     <script type="module" src="./products.js"></script>
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./user.js"></script>
 
 </head>
 <body id="indexBody">
 
 <button id="addProduct">lägg till</button>
+
+<div>
+    <div class="flex-menu">
+        <h1 class="menu-header">LOG-IN</h1>
+        <input id="signinUsername" placeholder="username"> 
+        <input id="signinPassword" type="password" placeholder="password"> 
+        <button id="loginButton" type="submit" value="login" id="SigninBtn">Sign in</button>
+    </div>
+    
+    <div class="flex-menu">
+        <h1 class="menu-header">CREATE ACCOUNT</h1>
+        <input id="registerEmail" placeholder="Enter your email">
+        <input id="registerName" placeholder="Whats your name?"> 
+        <input id="registerUsername" placeholder="Choose a username">
+        <input id="registerPassword" placeholder="Choose your password">
+        <input id="registerZip" placeholder="Enter your zip code">
+        <input id="registerAddress" placeholder="Enter your address">
+        <input id="registerPhone" placeholder="Enter your phone number">      
+        <button id="registerButton" name="submit">Register</button>  
+    </div>
+</div>
 
     
 </body>
