skriv ut cart + total pris funkar

--- a/cartPage.html
+++ b/cartPage.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="./common.css" />
-    <script type="module" src="./order.js"></script>
+    <script type="module" src="./cart.js"></script>
     <script type="module" src="./main.js"></script>
 
 </head>
