--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body id="indexBody">
-<a href="orderpage.html"><button id="customerPage">Till kundvagnssida</button></a>
+<a href="cartPage.html"><button id="customerPage">Till kundvagnssida</button></a>
 <button id="addProduct">lägg till</button>
 
 
