Login & reg works

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="menu-header">LOG-IN</h1>
         <input id="signinUsername" placeholder="username"> 
         <input id="signinPassword" type="password" placeholder="password"> 
-        <button id="loginButton" type="submit" value="login" id="SigninBtn">Sign in</button>
+        <button id="loginButton" type="submit">Sign in</button>
     </div>
     
     <div class="flex-menu">
@@ -31,11 +31,11 @@
         <input id="registerEmail" placeholder="Enter your email">
         <input id="registerName" placeholder="Whats your name?"> 
         <input id="registerUsername" placeholder="Choose a username">
-        <input id="registerPassword" placeholder="Choose your password">
+        <input id="registerPassword" type="password" placeholder="Choose your password">
         <input id="registerZip" placeholder="Enter your zip code">
         <input id="registerAddress" placeholder="Enter your address">
-        <input id="registerPhone" placeholder="Enter your phone number">      
-        <button id="registerButton" name="submit">Register</button>  
+        <input id="registerPhone" placeholder="Enter your phone number">  
+        <button id="registerButton" type="submit">Register</button>  
     </div>
 </div>
 
