--- a/myPage.html
+++ b/myPage.html
@@ -29,7 +29,7 @@
 
             <div class="brandLogo">
                 <a href="./index.html">
-                    <img width="100%" height="100%" src="./assets/layout/backlogo_sottoGott.png" alt="">
+                    <img src="./assets/layout/backlogo_sottoGott.png" alt="">
                 </a>
             </div>
             
