--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./common.css" />
     <script type="module" src="./products.js"></script>
     <script type="module" src="./main.js"></script>
-    <script type="module" src="./login.js"></script>
+    <script type="module" src="./FrontendMain.js"></script>
 
 </head>
 <body id="indexBody">
