--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <input id="registerName" placeholder="Whats your name?"> 
         <input id="registerUsername" placeholder="Choose a username">
         <input id="registerPassword" type="password" placeholder="Choose your password">
-        <input id="registerZip" placeholder="Enter your zip code">
+        <input id="registerZip" type="number" placeholder="Enter your zip code">
         <input id="registerAddress" placeholder="Enter your address">
-        <input id="registerPhone" placeholder="Enter your phone number">
+        <input id="registerPhone" type="number" placeholder="Enter your phone number">
         <div id="newsletter"><h4>Newsletter</h4><input id="cb" type="checkbox"></div>
         <div id="errorDiv"></div>  
         <button id="registerButton" type="submit">Register</button>  
