--- a/index.html
+++ b/index.html
@@ -54,15 +54,11 @@
         <div>
             <img class="footerLogo" src="./assets/layout/backlogo_sottoGott.png" alt="">
         </div>
-        <input placeholder="Användarnamn" type="text">
-        <input placeholder="Lösenord" type="password">
-        <div class="flexRow">
-            <div id="login" class="defaultBtn">Logga in</div>
+        <div id="formUser">
+
+
+
         </div>
-        <div>
-            <p>ny kund?</p> <span id="registerBtn">Registrera</span> <p>etc</p>
-        </div>
-    </div>
 </div>
     
     <main class="mainWrapper">
