--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
     
     <main class="mainWrapper">
 
-        <section class="popularProductsContainer">
+        <section class="productsWrapper">
             <div class="headlineContainer">
-                <h1>Populära Produkter</h1>
+                <h1>Produkter</h1>
             </div>
-            <div class="popularProductsItems">
+           
+            <div class="productContainer" id="allProductBox">
 
 
 
