--- a/cartPage.html
+++ b/cartPage.html
@@ -9,6 +9,7 @@
 
 
     <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="./cart.css" />
     <script type="module" src="./cart.js"></script>
     <script type="module" src="./main.js"></script>
 
