--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
         <div class="navRight">
             <div class="cartBtn">
-            <i id="cartBtn" class="fas fa-shopping-basket"></i>
+            <a href="./cartPage.html"><i id="cartBtn" class="fas fa-shopping-basket"></i></a>
         </div>
         
                 <div class="myPageBtn">
