--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="module" src="./products.js"></script>
     <script type="module" src="./main.js"></script>
     <script type="module" src="./FrontendMain.js"></script>
+    <!-- <script type="module" src="./user.js"></script> -->
 
 </head>
 <body id="indexBody">
@@ -114,9 +115,9 @@
             <div class="bottomContent">
                 <!-- Rendera ut content här! -->
                 <p>Ta del av erbjudanden och annan skit. Registrera dig på vårat Nyhetsbrev:</p>
-                <input placeholder="Namn" type="text">
-                <input placeholder="Email" type="text">
-                <div class="defaultBtn">JA TACK</div>
+                <input id="newsName" placeholder="Namn" type="text">
+                <input id="newsEmail" placeholder="Email" type="text">
+                <div id="newsBtn" class="defaultBtn">JA TACK</div>
             </div>
         </section>
 
