lägg-till-produkt-i-cart+räknar-antal-i-cart

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             
         <div class="navRight">
             <div class="cartBtn">
+                <div id="valueInCart"></div>
             <a href="./cartPage.html"><i id="cartBtn" class="fas fa-shopping-basket"></i></a>
         </div>
         
