--- a/cartPage.html
+++ b/cartPage.html
@@ -7,7 +7,7 @@
     <title>kundvagnssida</title>
 
 
-
+    <script src="https://kit.fontawesome.com/d32b574ff2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./cart.css" />
     <script type="module" src="./cart.js"></script>
