--- a/myPage.html
+++ b/myPage.html
@@ -35,7 +35,10 @@
             
         <div class="navRight">
             <div class="myPageBtn"> 
-                <i class="fas fa-shopping-basket"></i>
+                <a href="./cartPage.html">
+                    <i id="cartBtn" class="fas fa-shopping-basket"></i>
+
+                </a>
             </div>
             
             <div class="cartBtn">
