--- a/cartPage.html
+++ b/cartPage.html
@@ -7,8 +7,9 @@
     <title>kundvagnssida</title>
 
 
-
+    <script src="https://kit.fontawesome.com/d32b574ff2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="./cart.css" />
     <script type="module" src="./cart.js"></script>
     <script type="module" src="./main.js"></script>
 
@@ -17,6 +18,9 @@
 
 
 <div id="testDiv"></div>
+
+<div id="shippingDiv">
+</div>
     
 </body>
 </html>
