--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         </section>
         <section id="productWrapper">
             <div class="headlineContainer">
-                <h1 class="anchorPoint" id="anchorProduct">Produkter</h1>
             </div>
+            <h1 id="anchorProduct">Produkter</h1>
            
             <div class="productContainer" id="allProductBox">
 
