--- a/cartPage.html
+++ b/cartPage.html
@@ -18,9 +18,11 @@
 
 
 <div id="testDiv"></div>
+<div id="test"></div>
 
-<div id="shippingDiv">
-</div>
+<div id="shippingDiv"></div>
+<div id="totalPrice"></div>
+
     
 </body>
 </html>
