--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <div id="valueInCart"></div>
             <a href="./cartPage.html"><i id="cartBtn" class="fas fa-shopping-basket"></i></a>
 
-        </div>
+            </div>
         
-                <div class="myPageBtn">
-
+            <div class="myPageBtn">
+                <div id="currentUser"></div>
                 <i id="userLogin" class="far fa-user"></i>
             </div>
         </div>
