--- a/cartPage.html
+++ b/cartPage.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kundvagnssida</title>
 
+   <link rel="stylesheet" href="common.css">
 
     <script src="https://kit.fontawesome.com/d32b574ff2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./cart.css" />
     <script type="module" src="./cart.js"></script>
     <script type="module" src="./main.js"></script>
@@ -21,6 +21,8 @@
 
 <div id="shippingDiv">
 </div>
-    
+
+<div class="defaultBtn" id="shipper">skicka order</div>
+  
 </body>
 </html>
