--- a/cartPage.html
+++ b/cartPage.html
@@ -14,7 +14,7 @@
     <script type="module" src="./main.js"></script>
 
 </head>
-<body id="indexBody">
+<body id="cartBody">
 
 
 <div id="testDiv"></div>
