--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
        
         <div class="navRight">
-            <a href="./cartPage.html">
+            <a id="cartRedirection" ">
                 <div class="cartBtn">
                     
                     <i id="cartIcon" class="fas fa-shopping-basket"></i>
@@ -125,6 +125,7 @@
                 <p>Ta del av erbjudanden och annan skit. Registrera dig på vårat Nyhetsbrev:</p>
                 <input id="newsName" placeholder="Namn" type="text">
                 <input id="newsEmail" placeholder="Email" type="text">
+                <div id="responsePhp"></div>
                 <div id="newsBtn" class="defaultBtn">JA TACK</div>
             </div>
         </section>
