--- a/myPage.html
+++ b/myPage.html
@@ -67,6 +67,11 @@
         
                 <div class="myPageMenu">
 
+                    <div id="adm-panel" class="myPageMenuBtn">
+                        <i class="fas fa-tools"></i>
+                        <h1>Admin panel</h1>
+                        </div>
+
                             <div id="userBtn" class="myPageMenuBtn">
                                 <i class="fas fa-cog"></i>
                                 <h1>Uppgifter</h1>
