--- a/adminDash.html
+++ b/adminDash.html
@@ -8,8 +8,8 @@
 
 
 
-    <link rel="stylesheet" href="./adminProduct.css" />
-    <script type="module" src="./adminProduct.js"></script>
+    <link rel="stylesheet" href="./adminDash.css" />
+    <script type="module" src="./adminDash.js"></script>
 
 
 </head>
