--- a/myPage.html
+++ b/myPage.html
@@ -81,6 +81,11 @@
                             <i class="fas fa-envelope"></i>
                             <h1>Nyhetsbrev</h1>
                         </div>
+
+                        <div id="logoutBtn" class="myPageMenuBtn">
+                            <i class="fas fa-envelope"></i>
+                            <h1>Logga ut</h1>
+                        </div>
                         
                 </div>
 
