--- a/cartPage.html
+++ b/cartPage.html
@@ -78,6 +78,7 @@
             <p>Ta del av erbjudanden och annan skit. Registrera dig på vårat Nyhetsbrev:</p>
             <input id="newsName" placeholder="Namn" type="text">
             <input id="newsEmail" placeholder="Email" type="text">
+            <div id="responsePhp"></div>
             <div id="newsBtn" class="defaultBtn">JA TACK</div>
         </div>
     </section>
