--- a/myPage.html
+++ b/myPage.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./common.css" />
-    <link rel="stylesheet" href="./cart.css" />
-    <link rel="stylesheet" href="./header.css" />
+    <link rel="stylesheet" href="./common.css" />    <!-- Kan krocka med myPage.css -->
+<!--     <link rel="stylesheet" href="./cart.css" />
+ -->    <link rel="stylesheet" href="./header.css" />
     <link rel="stylesheet" href="./animations.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ydb2bnu.css">
     <link rel="stylesheet" href="myPage.css">
+    <link rel="stylesheet" href="adminDash.css">
     <script type="module" src="./myPage.js"></script>
     <script type="module" src="./header.js"></script>
 
@@ -67,10 +68,10 @@
         
                 <div class="myPageMenu">
 
-                    <div id="adm-panel" class="myPageMenuBtn">
+<!--                     <div id="adm-panel" class="myPageMenuBtn">
                         <i class="fas fa-tools"></i>
                         <h1>Admin panel</h1>
-                        </div>
+                        </div> -->
 
                             <div id="userBtn" class="myPageMenuBtn">
                                 <i class="fas fa-cog"></i>
